Object Info node does not return random value in EEVEE #59877

Closed
opened 2018-12-26 19:05:57 +01:00 by Rolands · 17 comments

System Information
Operating system: Windows 10

Blender Version
Broken:
2.80, 60b930af3e, blender2.8, 2018-12-26

Short description of error
Object Info node does not return random value in EEVEE

Exact steps for others to reproduce the error
In attached file switch between EEVEE and Cycles

bug2.PNG

bug1.PNG

bug.blend

**System Information** Operating system: Windows 10 **Blender Version** Broken: 2.80, 60b930af3e73, blender2.8, 2018-12-26 **Short description of error** Object Info node does not return random value in EEVEE **Exact steps for others to reproduce the error** In attached file switch between EEVEE and Cycles ![bug2.PNG](https://archive.blender.org/developer/F6078990/bug2.PNG) ![bug1.PNG](https://archive.blender.org/developer/F6078989/bug1.PNG) [bug.blend](https://archive.blender.org/developer/F6078988/bug.blend)

#61378 was marked as duplicate of this issue

#61378 was marked as duplicate of this issue

#59908 was marked as duplicate of this issue

#59908 was marked as duplicate of this issue
Author

Added subscriber: @RolandsTiss

Added subscriber: @RolandsTiss

Added subscriber: @ixd

Added subscriber: @ixd
Member

Added subscribers: @fclem, @lichtwerk

Added subscribers: @fclem, @lichtwerk
Clément Foucault was assigned by Philipp Oeser 2018-12-27 10:09:41 +01:00
Member

Confirmed.
Manual says it should be supported.

@fclem: mind checking on this?

Confirmed. [Manual ](https://docs.blender.org/manual/en/dev/render/eevee/materials/nodes_support.html) says it should be supported. @fclem: mind checking on this?
Member

Added subscriber: @zgorg

Added subscriber: @zgorg

Added subscriber: @comvico

Added subscriber: @comvico

Is there a fix available for the problem?

Is there a fix available for the problem?

Added subscriber: @absurdshark

Added subscriber: @absurdshark

In #59877#603589, @comvico wrote:
Is there a fix available for the problem?

I think i found a workaround with the help of the "Vector Displacement" and "Noise Texture" nodes. I applied this to the material for the object which im using for the particles.
It seems to work with particle systems (and i assume only the particle system does not work with the random element of the "Object Info" node, since that node works for me with normal object placement.) Also these settings are optimized for hair emitters, since somehow the other particle system is affected differently. I recommend finetuning the "Vector Displacement" and "Noise Texture" nodes, if you think you dont get all the colors from the color ramp. workaround2.jpg

> In #59877#603589, @comvico wrote: > Is there a fix available for the problem? I think i found a workaround with the help of the "Vector Displacement" and "Noise Texture" nodes. I applied this to the material for the object which im using for the particles. It seems to work with particle systems (and i assume only the particle system does not work with the random element of the "Object Info" node, since that node works for me with normal object placement.) Also these settings are optimized for hair emitters, since somehow the other particle system is affected differently. I recommend finetuning the "Vector Displacement" and "Noise Texture" nodes, if you think you dont get all the colors from the color ramp. ![workaround2.jpg](https://archive.blender.org/developer/F6424438/workaround2.jpg)

Added subscriber: @LaurenceWeedy

Added subscriber: @LaurenceWeedy

Added subscriber: @luischerub

Added subscriber: @luischerub

This comment was removed by @luischerub

*This comment was removed by @luischerub*

I think my bug, #61378, is not the same as this bug.

In my bug if you link duplicate an object with hair particles, the the Random output of the Object Info node did not work properly. This seems to have been fixed in this build and is working properly:

version: 2.80 (sub 46), branch: blender2.7, commit date: 2019-03-06 00:18, hash: 18e5540a48, type: Release build date: 05/03/2019, 17:06
platform: Windows

But testing the bug.blend from this bug report #59877, the problem is still present.

Thought that might be useful information.

I think my bug, #61378, is not the same as this bug. In my bug if you link duplicate an object with hair particles, the the Random output of the Object Info node did not work properly. This seems to have been fixed in this build and is working properly: version: 2.80 (sub 46), branch: blender2.7, commit date: 2019-03-06 00:18, hash: 18e5540a48b6, type: Release build date: 05/03/2019, 17:06 platform: Windows But testing the bug.blend from this bug report #59877, the problem is still present. Thought that might be useful information.

This issue was referenced by dabf593163

This issue was referenced by dabf5931636cf6797718da8329e4b537d294cb21

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
10 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59877
No description provided.