Fix T59877: EEVEE: Object Info node random value does not work with Duplis